// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-stack> component basic usage 1`] = `
<bolt-stack>
  <replace-with-children class="c-bolt-stack c-bolt-example--spacing-medium">
    This is one stack. A stack spans the full width of its parent container.
  </replace-with-children>
</bolt-stack>
<bolt-stack>
  <replace-with-children class="c-bolt-stack c-bolt-example--spacing-medium">
    This is another stack.
  </replace-with-children>
</bolt-stack>
`;

exports[`<bolt-stack> component outer CSS class via Drupal Attributes 1`] = `
<bolt-stack class="u-bolt-color-teal">
  <replace-with-children class="c-bolt-stack c-bolt-example--spacing-medium">
    This is a stack
  </replace-with-children>
</bolt-stack>
`;

exports[`<bolt-stack> component stack spacing: large 1`] = `
<bolt-stack>
  <replace-with-children class="c-bolt-stack c-bolt-example--spacing-medium">
    This is one stack. A stack spans the full width of its parent container.
  </replace-with-children>
</bolt-stack>
<bolt-stack>
  <replace-with-children class="c-bolt-stack c-bolt-example--spacing-medium">
    This is another stack.
  </replace-with-children>
</bolt-stack>
`;

exports[`<bolt-stack> component stack spacing: medium 1`] = `
<bolt-stack>
  <replace-with-children class="c-bolt-stack c-bolt-example--spacing-medium">
    This is one stack. A stack spans the full width of its parent container.
  </replace-with-children>
</bolt-stack>
<bolt-stack>
  <replace-with-children class="c-bolt-stack c-bolt-example--spacing-medium">
    This is another stack.
  </replace-with-children>
</bolt-stack>
`;

exports[`<bolt-stack> component stack spacing: none 1`] = `
<bolt-stack>
  <replace-with-children class="c-bolt-stack c-bolt-example--spacing-medium">
    This is one stack. A stack spans the full width of its parent container.
  </replace-with-children>
</bolt-stack>
<bolt-stack>
  <replace-with-children class="c-bolt-stack c-bolt-example--spacing-medium">
    This is another stack.
  </replace-with-children>
</bolt-stack>
`;

exports[`<bolt-stack> component stack spacing: small 1`] = `
<bolt-stack>
  <replace-with-children class="c-bolt-stack c-bolt-example--spacing-medium">
    This is one stack. A stack spans the full width of its parent container.
  </replace-with-children>
</bolt-stack>
<bolt-stack>
  <replace-with-children class="c-bolt-stack c-bolt-example--spacing-medium">
    This is another stack.
  </replace-with-children>
</bolt-stack>
`;

exports[`<bolt-stack> component stack spacing: xlarge 1`] = `
<bolt-stack>
  <replace-with-children class="c-bolt-stack c-bolt-example--spacing-medium">
    This is one stack. A stack spans the full width of its parent container.
  </replace-with-children>
</bolt-stack>
<bolt-stack>
  <replace-with-children class="c-bolt-stack c-bolt-example--spacing-medium">
    This is another stack.
  </replace-with-children>
</bolt-stack>
`;

exports[`<bolt-stack> component stack spacing: xsmall 1`] = `
<bolt-stack>
  <replace-with-children class="c-bolt-stack c-bolt-example--spacing-medium">
    This is one stack. A stack spans the full width of its parent container.
  </replace-with-children>
</bolt-stack>
<bolt-stack>
  <replace-with-children class="c-bolt-stack c-bolt-example--spacing-medium">
    This is another stack.
  </replace-with-children>
</bolt-stack>
`;
